--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Página Principal -->
-    <section id="inicio" class="pagina activa">
+    <section id="inicio" class="pagina activa" style="position: relative;">
         <div class="contenedor-iphone">
             <div class="corazones-flotantes"></div>
             
