--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
     <!-- Pagina chunis -->
      <section id="pagina-vacia" class="pagina">
-    <div class="contenedor-iphone">
+        <div id="lluvia-container"></div>
+        <div class="contenedor-iphone">
         <h1>Lluvia de Chuniiiis</h1>
         <button class="boton-ios" onclick="navegarA('inicio')">
             Volver al inicio
